WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
205588
REGRESSION (
r253282
): Tests that use applyAutocorrection assert in UIScriptContext::requestUIScriptCompletion
https://bugs.webkit.org/show_bug.cgi?id=205588
Summary
REGRESSION (r253282): Tests that use applyAutocorrection assert in UIScriptCo...
Wenson Hsieh
Reported
2019-12-24 21:25:43 PST
<
rdar://problem/58109942
>
Attachments
Patch
(1.77 KB, patch)
2019-12-24 21:37 PST
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2019-12-24 21:37:43 PST
Created
attachment 386399
[details]
Patch
Tim Horton
Comment 2
2019-12-24 22:43:47 PST
Comment on
attachment 386399
[details]
Patch Whoops. Thanks!
Wenson Hsieh
Comment 3
2019-12-25 04:37:26 PST
Comment on
attachment 386399
[details]
Patch Thanks for the review!
WebKit Commit Bot
Comment 4
2019-12-25 05:08:29 PST
The commit-queue encountered the following flaky tests while processing
attachment 386399
[details]
: imported/w3c/web-platform-tests/IndexedDB/keygenerator-inject.html
bug 205593
(author:
youennf@gmail.com
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 5
2019-12-25 05:09:12 PST
Comment on
attachment 386399
[details]
Patch Clearing flags on attachment: 386399 Committed
r253908
: <
https://trac.webkit.org/changeset/253908
>
WebKit Commit Bot
Comment 6
2019-12-25 05:09:13 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug